[metadata]
# replace with your username:
name = intervalsicu
version = 0.1.3
author = Ryan Day
author_email = ryanday2@gmail.com
description = API to Intervals.ICU
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rday/py-intervalsicu
project_urls =
    Bug Tracker = https://github.com/rday/py-intervalsicu
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires = 
    pytest==6.2.2
    requests>=2.28.1
packages = find:
python_requires = >=3.6
